--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+# Environment files
+.env
+.env.*
+!.env.example
+
 ## User settings
 xcuserdata/
 
